--- a/content/articles/2026-02-09-105721.md
+++ b/content/articles/2026-02-09-105721.md
@@ -9,7 +9,7 @@ summary: இவ்வுலகின் ஓட்டமும் பிரயா
   நம்பிக்கையையும் குறித்த ஓர் ஆழமான சிந்தனை.
 image: /uploads/life.jpg
 ---
-அண்மையில் எனது சிறுவயது நண்பன், என்னை விட ஒரு வயது இளையவன், புற்றுநோயால் இறந்துவிட்டான். அவன் தன் குடும்பத்தில் மூத்த மகன். எத்தனையோ எதிர்பார்ப்புகள் அவனுக்கு இருந்திருக்கும். படித்து முடித்துவிட்டு வாழ்க்கையைத் தொடங்கும் காலம் அது. எதிர்காலத்தைக் குறித்த எண்ணற்ற கனவுகளோடு இருந்திருப்பான். ஆனால், கடந்த இரண்டு வருடப் போராட்டத்தின் இறுதியில் மரணம் அவனைத் தழுவிக்கொண்டது.
+அண்மையில் எனது சிறுவயது நண்பன், என்னை விட ஒரு வயது இளையவன், புற்றுநோயால் இறந்துவிட்டான். அவன் தன் குடும்பத்தில் மூத்த மகன். எத்தனையோ எதிர்பார்ப்புகள் அவனுக்கு இருந்திருக்கும். படித்து முடித்துவிட்டு வாழ்க்கையைத் தொடங்கும் காலம் அது. எதிர்காலத்தைக் குறித்த எண்ணற்ற கனவுகளோடு இருந்திருப்பான். ஆனால், கடந்த இரண்டு வருடப் போராட்டத்தின் இறுதியில் மரணம் அவனைத் தழுவிக்கொண்டது. (Matthew 1:1)
 
 அந்த மரண வீட்டின் சூழலையும், அங்கே கிடத்தப்பட்டிருந்த அவனது உடலைப் பார்க்க வந்த உறவினர்கள் மற்றும் நண்பர்களையும் கவனித்தபோது, எனக்குள்ளே ஒரு சிந்தனை மீண்டும் மீண்டும் எழுந்தது: **"ஏன் இந்த வாழ்க்கை? இந்த வாழ்க்கையின் அர்த்தம்தான் என்ன?"** 25 வருடங்கள் வளர்த்த மகன் கைநழுவிப் போனபோது, அந்தப் பெற்றோர்கள் அதை எவ்வாறு ஏற்றுக் கொள்வார்கள்? அவர்களுக்கு எப்படி ஆறுதல் கிடைக்கும்? எனப் பல கேள்விகள் எழும்பின.
 
