--- a/content/articles/2026-02-09-105721.md
+++ b/content/articles/2026-02-09-105721.md
@@ -2,6 +2,13 @@
 title: வாழ்க்கையின் அர்த்தம் என்ன?
 date: 2026-02-09T10:56:37.526Z
 author: Josiah Prathaban
+tags:
+  - Life
+keywords:
+  - Life
+  - Meaning of Life
+  - வாழ்க்கையின் அர்த்தம்
+  - வாழ்க்கை
 summary: இவ்வுலகின் ஓட்டமும் பிரயாசமும் ஒருநாள் மரணத்தினால்
   முடிந்துபோகுமென்றால், மனுஷவாழ்வின் பலன் என்ன? எல்லாம் மாயை என்று தோன்றும்
   இவ்வேளையில், ஒருவன் தன் வாழ்வின் மெய்யான அர்த்தத்தை எங்கே கண்டடைவான்?
