--- a/content/articles/2026-02-09-105721.md
+++ b/content/articles/2026-02-09-105721.md
@@ -16,7 +16,7 @@ summary: இவ்வுலகின் ஓட்டமும் பிரயா
   நம்பிக்கையையும் குறித்த ஓர் ஆழமான சிந்தனை.
 image: /uploads/life.jpg
 ---
-அண்மையில் எனது சிறுவயது நண்பன், என்னை விட ஒரு வயது இளையவன், புற்றுநோயால் இறந்துவிட்டான். அவன் தன் குடும்பத்தில் மூத்த மகன். எத்தனையோ எதிர்பார்ப்புகள் அவனுக்கு இருந்திருக்கும். படித்து முடித்துவிட்டு வாழ்க்கையைத் தொடங்கும் காலம் அது. எதிர்காலத்தைக் குறித்த எண்ணற்ற கனவுகளோடு இருந்திருப்பான். ஆனால், கடந்த இரண்டு வருடப் போராட்டத்தின் இறுதியில் மரணம் அவனைத் தழுவிக்கொண்டது. (மத்தேயு 1:1)
+அண்மையில் எனது சிறுவயது நண்பன், என்னை விட ஒரு வயது இளையவன், புற்றுநோயால் இறந்துவிட்டான். அவன் தன் குடும்பத்தில் மூத்த மகன். எத்தனையோ எதிர்பார்ப்புகள் அவனுக்கு இருந்திருக்கும். படித்து முடித்துவிட்டு வாழ்க்கையைத் தொடங்கும் காலம் அது. எதிர்காலத்தைக் குறித்த எண்ணற்ற கனவுகளோடு இருந்திருப்பான். ஆனால், கடந்த இரண்டு வருடப் போராட்டத்தின் இறுதியில் மரணம் அவனைத் தழுவிக்கொண்டது.
 
 அந்த மரண வீட்டின் சூழலையும், அங்கே கிடத்தப்பட்டிருந்த அவனது உடலைப் பார்க்க வந்த உறவினர்கள் மற்றும் நண்பர்களையும் கவனித்தபோது, எனக்குள்ளே ஒரு சிந்தனை மீண்டும் மீண்டும் எழுந்தது: **"ஏன் இந்த வாழ்க்கை? இந்த வாழ்க்கையின் அர்த்தம்தான் என்ன?"** 25 வருடங்கள் வளர்த்த மகன் கைநழுவிப் போனபோது, அந்தப் பெற்றோர்கள் அதை எவ்வாறு ஏற்றுக் கொள்வார்கள்? அவர்களுக்கு எப்படி ஆறுதல் கிடைக்கும்? எனப் பல கேள்விகள் எழும்பின.
 
@@ -26,6 +26,10 @@ image: /uploads/life.jpg
 
 ஒவ்வொருவருக்கும் ஒவ்வொரு விதமான இலக்குகள் உண்டு. சிலர் அதிக அறிவைப் பெறவும், சிலர் அதிக ஊதியம் பெறவும், சிலர் சொத்துகளைப் பெருக்கவும் ஓடுகிறார்கள். இன்னும் சிலர் இந்த உலகத்தில் எதையாவது சாதிக்க அல்லது புதிதாக எதையாவது கண்டுபிடிக்க வேண்டும் என்ற வேட்கையோடு முன்னேறுகிறார்கள். பலர் உலகிற்குப் பிரயோஜனமாக வாழ்கிறார்கள்; வெகு சிலர் எந்தப் பிரயோஜனமும் இன்றியும் வாழக்கூடும்.
 
+(பிரசங்கி 2:22-23), (சங்கீதம் 39:6)
+
+
+
 ### **மரணத்தின் யதார்த்தம்**
 
 வாழ்க்கை இப்படியே தொடர்ந்து நீடிப்பதில்லை. இந்த ஓட்டம் ஒருநாள் முடிவுக்கு வரும். அனைவருக்கும் மரணம் என்பது நிச்சயம். சிலருக்கு அது சடுதியாக வரும்; சிலருக்கு எதிர்பார்ப்புடனேயே வரும். சிலர் வாழ்க்கையைத் தொடங்கும்போதே மரணிக்கிறார்கள்; சிலர் வாழ்ந்து அனுபவித்து முதிர் வயதில் மரணிக்கிறார்கள். எல்லா நிலைகளிலும் மரணம் என்பது தவிர்க்க முடியாதது.
@@ -33,6 +37,10 @@ image: /uploads/life.jpg
 உதாரணமாக, ஒருவர் மிகவும் பயன்தரக்கூடிய ஒரு நவீன இயந்திரத்தை உருவாக்குகிறார் என்று வைப்போம். அவர் அதை உருவாக்கத் தொடங்கும் முன்னரோ, வேலை நடந்து கொண்டிருக்கும் போதோ, அல்லது முடியும் தருவாயிலோ மரணம் வரலாம். இல்லை எனில், அதை அறிமுகப்படுத்தி அதன் பெயரையும் புகழையும் அனுபவித்த பிறகு ஒருநாள் மரணம் வரலாம். அப்படியென்றால் இதன் அர்த்தம்தான் என்ன? நாம் இந்த உலகத்தில் செய்கிற ஒவ்வொரு காரியத்தின் பலன் என்ன?
 
 சமூக முன்னேற்றத்திற்காக நாம் எதையாவது செய்து வரலாற்றில் பெயர் பதித்திருக்கலாம். நாம் மறைந்த பிறகு சில காலம் அதை நினைவு வைத்திருப்பார்கள், பின்பு ஒருநாள் மறந்துவிடுவார்கள். நாம் உருவாக்கிய நல்ல கண்டுபிடிப்புகள் வரும் சந்ததியினருக்குப் பயன்படலாம். இருப்பினும், ஒருநாள் இந்த உலகமே அழிந்துபோய்விடும். அப்படியென்றால் அதன் அர்த்தம் என்ன? அழியப்போகும் உலகம் என்று தெரிந்தும் அதை முன்னேற்ற முயற்சி செய்கிறோம்; அழியப்போகும் வாழ்க்கை என்று தெரிந்தும் முன்னேறத் துடிக்கிறோம். இவை அனைத்தின் பலனும் என்ன?
+
+(எபிரெயர் 9:27), (சங்கீதம் 103:15-16), (லூக்கா 12:20)
+
+
 
 ### **தேவனில் கிடைக்கும் அர்த்தம்**
 
@@ -42,11 +50,19 @@ image: /uploads/life.jpg
 
 ஆயினும், தேவன் எம்மை அப்படியே கைவிட்டுவிடவில்லை. அவர் எம் மீது வைத்த மிகுந்த அன்பின் நிமித்தம் தமது சொந்தக் குமாரனை அனுப்பி, அவர் மூலமாக எம்மை மீட்டு, மீண்டும் தம்முடைய பிள்ளைகளாக ஏற்றுக்கொண்டுள்ளார். பாவம் உள்நுழைவதற்கு முன்னர் எல்லாம் அழகானதாகவும், அர்த்தமுள்ளதாகவும், பூரணமானதாகவும் இருந்தது. வீழ்ச்சிக்குப் பிறகு சாபமும் மரணமும் வந்ததால் வாழ்க்கையின் அர்த்தம் கேள்விக்குறியானது.
 
+(ஏசாயா 43:7), (கொலோசெயர் 1:16), (ரோமர் 5:15)
+
+
+
 ### **இரட்சிப்பின் ஒளி**
 
 இந்த உலகம் சபிக்கப்பட்டது. ஆகவே, இந்த உலகமும் இதில் உள்ள வாழ்க்கையும் தேவன் இன்றி அர்த்தமற்றதாகவே இருக்கும். ஆனால், அன்பு நிறைந்த தேவன் எம்மை ஒரு மாயைக்குள் அப்படியே விட்டுவிடவில்லை. இந்த அர்த்தமற்ற சாபத்திற்குள்ளான உலகத்திலிருந்து எம்மை மீட்க ஒரு வழியை ஆயத்தப்படுத்தினார்; அதுதான் அவருடைய இரட்சிப்பு. அந்த இரட்சிப்பு அந்தகாரத்தில் இருந்த எமக்கு ஒரு பேரொளி. அந்த இரட்சிப்பே எமது வாழ்க்கையை அர்த்தப்படுத்துகிறது; ஒரு நோக்கத்தைக் கொடுக்கிறது; வாழ்வை அழகாக்குகிறது.
 
 இரட்சிக்கப்பட்ட பின்னரும் நாம் அதே சபிக்கப்பட்ட உலகத்தில்தான் வாழ்கிறோம். ஆனால், நாம் இந்த உலகத்திற்கு உரியவர்கள் அல்ல; இதைச் சார்ந்தவர்களும் அல்ல. வேறு ஒரு நித்தியமான, பூரணமான, மகத்துவமான வாழ்க்கையை நோக்கி தேவனுடைய பிள்ளைகளாக வாழ்கிறோம். இப்போது எமது இலக்கு, பார்வை, சிந்தனை எல்லாம் தெளிவடைகின்றன.
+
+(1 பேதுரு 2:9), (எபேசியர் 2:4-5)
+
+
 
 ### **நித்திய நோக்கம்**
 
@@ -55,6 +71,8 @@ image: /uploads/life.jpg
 ஆகவே, இரட்சிக்கப்பட்ட ஒருவனாக வாழ்க்கையைப் பார்க்கும்போது, அது முற்றிலும் வேறொரு அர்த்தமுள்ள, அழகான, நம்பிக்கை நிறைந்த வாழ்வாக மாறுகிறது. நாம் பிறப்பது தேவனுடைய சித்தம். ஒவ்வொருவரும் வெவ்வேறு சூழ்நிலைகளில் பிறந்து வளர்கிறோம்; காரியங்களைச் செய்கிறோம். எல்லாம் அவர் நியமித்தது. அவர் தருகிற காரியங்கள் என்றும் அழகானது, நன்மையானது. அவர் எங்களைத் தெரிந்துகொண்டு, இரட்சித்து, விசுவாசத்தைத் தந்து, வாழ்க்கைக்கு நோக்கத்தையும் அர்த்தத்தையும் தருகிறார். நற்கிரியைகளைச் செய்ய வைக்கிறார்; வாழ வேண்டிய விதத்தைக் காண்பிக்கிறார்.
 
 ஒருநாள் மரணம் வரும் என்ற நிலையிலும், இரட்சிக்கப்பட்டவர்களுக்கு அது மகிழ்ச்சியான நாள். போராட்டமுள்ள இந்த மாம்சத்திலிருந்தும், சபிக்கப்பட்ட உலகத்திலிருந்தும் விடுபட்டு தேவனோடு வாழச் செல்லும் நாள் அது. எனவே, உலகப்பிரகாரமான காரியங்கள் ஒருநாள் அழிந்து போகக்கூடியவைதான். ஆனாலும், நாம் செய்கின்ற காரியங்களை முழுமனதோடு, முறுமுறுப்பில்லாமல், தேவன் தருகிற பலத்தோடு செய்ய வேண்டும். இவற்றை மற்றவர்களுடைய பிரயோஜனத்திற்காகவும் தேவனுடைய மகிமைக்காகவும் செய்ய வேண்டும். ஏனெனில், இறுதியில் தேவனோடு நித்தியத்தில் வாழப்போகிறோம் என்கிற நம்பிக்கையே இந்த வாழ்க்கைக்கு உண்மையான அர்த்தத்தைத் தருகிறது.
+
+(1 யோவான் 3:2), (ரோமர் 8:29), (பிலிப்பியர் 3:20), (2 கொரிந்தியர் 4:17-18)
 
 ### **முடிவுரை**
 
