--- a/content/articles/2026-02-11-080641.md
+++ b/content/articles/2026-02-11-080641.md
@@ -6,6 +6,12 @@ tags:
   - ஸ்பர்ஜன்
 keywords:
   - ஸ்பர்ஜன்
+summary: தேவனின் மாறாத தன்மையே விசுவாசிகளின் மிகப்பெரிய புகலிடம் என ஸ்பர்ஜன்
+  விளக்குகிறார். தேவன் தமது பண்புகளிலும், வாக்குத்தத்தங்களிலும், திட்டங்களிலும்
+  ஒருபோதும் மாறுவதில்லை. பலவீனமான "யாக்கோபின் புத்திரர்" பாவத்தினால்
+  நிர்மூலமாகாமல் இருப்பதற்குக் காரணம் யெகோவாவின் மாறாத கிருபையே. உலகம்
+  மாறினாலும், தேவன் மாறாதவர் எனும் சத்தியமே கிறிஸ்தவ வாழ்வின் அசைக்க முடியாத
+  அஸ்திவாரம்.
 ---
 > "நான் கர்த்தர், நான் மாறாதவர்; ஆகையால் யாக்கோபின் புத்திரராகிய நீங்கள் நிர்மூலமாகவில்லை." (மல்கியா 3:6)
 
