--- a/content/articles/2026-02-09-105721.md
+++ b/content/articles/2026-02-09-105721.md
@@ -2,6 +2,7 @@
 title: வாழ்க்கையின் அர்த்தம் என்ன?
 date: 2026-02-09T10:56:37.526Z
 author: Josiah Prathaban
+type: கட்டுரை
 tags:
   - Life
 keywords:
