--- a/content/articles/2026-02-11-080641.md
+++ b/content/articles/2026-02-11-080641.md
@@ -2,6 +2,7 @@
 title: தேவனுடைய மாறாத தன்மை
 date: 2026-02-11T07:58:46.868Z
 author: "சி. எச். ஸ்பர்ஜன் (மொழிபெயர்ப்பு: Gemini AI)"
+type: பிரசங்கம்
 tags:
   - ஸ்பர்ஜன்
 keywords:
