--- a/content/articles/2026-02-12-050118.md
+++ b/content/articles/2026-02-12-050118.md
@@ -2,6 +2,7 @@
 title: நித்திய உடன்படிக்கையில் கிறிஸ்து
 date: 2026-02-12T04:54:53.657Z
 author: "சி. எச். ஸ்பர்ஜன் (மொழிபெயர்ப்பு: Gemini AI)"
+type: பிரசங்கம்
 tags:
   - ஸ்பர்ஜன்
 keywords:
