--- a/content/articles/2026-02-12-050118.md
+++ b/content/articles/2026-02-12-050118.md
@@ -16,6 +16,7 @@ summary: தேவன் கிறிஸ்துவை ஜனங்களுக
   பயன்படுத்தவுமே அவர் உடன்படிக்கையில் வைக்கப்பட்டிருக்கிறார். எனவே,
   கிறிஸ்துவினுடையவர்களாய் வாழ்ந்து, அவருடைய இலவசக் கிருபையை முழுமையாய்
   நம்பும்படி இச்செய்தி அழைப்பு விடுக்கிறது.
+image: /uploads/7203.jpg
 ---
 > "ஜனங்களுக்கு உடன்படிக்கையாக நான் உம்மை ஒப்புக்கொடுப்பேன்." (ஏசாயா 49:9)
 
