--- a/content/articles/2026-02-13-095918.md
+++ b/content/articles/2026-02-13-095918.md
@@ -3,7 +3,7 @@ title: "நற்செய்தி: தேவனுடைய இரட்சி
 date: 2026-02-13T09:51:30.265Z
 author: Josiah Prathaban
 type: கட்டுரை
-image: /uploads/long.jpg
+image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 ---
 தேவன் இந்த உலகத்தை எவ்வளவு மகிமையாய்ப் படைத்தார் என்பதையும், பாவத்தின் பிரவேசத்தினால் மனுக்குலம் அடைந்த அந்தகார நிலையையும் நாம் ஆராய்ந்து பார்க்கலாம். நாம் பாவிகளாயிருக்கையில் தேவன் நம்மேல் வைத்த அளவற்ற அன்பினால், தமது தயையுள்ள சித்தத்தின்படி நமக்காக ஒரு மீட்பின் திட்டத்தை நியமித்தார். அந்தத் திட்டத்தை அவர் இயேசு கிறிஸ்துவில் நிறைவேற்றி, நம்மைப் பாவத்திலிருந்து மீட்டு, இன்றும் பரிசுத்த ஆவியானவர் மூலமாக நம்மைப் பரிசுத்தமாக்கித் தமது கிருபையினால்  தொடர்ந்து நடத்தி வருகிறார். இந்தத் தியானத்தின் ஊடாக, கிறிஸ்துவுக்குள் நமக்குக் கிடைத்துள்ள புதிய அடையாளத்தையும், அவர் நமக்குக் கொடுத்துள்ள உன்னதமான பணியையும், நித்திய நம்பிக்கையையும் விரிவாகத் தியானிக்கப்போகிறோம்.
 
