--- a/content/articles/2026-02-13-095918.md
+++ b/content/articles/2026-02-13-095918.md
@@ -3,19 +3,16 @@ title: "நற்செய்தி: தேவனுடைய இரட்சி
 date: 2026-02-13T09:51:30.265Z
 author: Josiah Prathaban
 type: கட்டுரை
+summary: நாம் பாவிகளாயிருக்கையில் தேவன் நம்மேல் வைத்த அளவற்ற அன்பினால், தமது
+  தயையுள்ள சித்தத்தின்படி நமக்காக ஒரு மீட்பின் திட்டத்தை நியமித்தார். அந்தத்
+  திட்டத்தை அவர் இயேசு கிறிஸ்துவில் நிறைவேற்றி, நம்மைப் பாவத்திலிருந்து மீட்டு,
+  இன்றும் பரிசுத்த ஆவியானவர் மூலமாக நம்மைப் பரிசுத்தமாக்கித் தமது கிருபையினால்
+  தொடர்ந்து நடத்தி வருகிறார்.
 image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 ---
 தேவன் இந்த உலகத்தை எவ்வளவு மகிமையாய்ப் படைத்தார் என்பதையும், பாவத்தின் பிரவேசத்தினால் மனுக்குலம் அடைந்த அந்தகார நிலையையும் நாம் ஆராய்ந்து பார்க்கலாம். நாம் பாவிகளாயிருக்கையில் தேவன் நம்மேல் வைத்த அளவற்ற அன்பினால், தமது தயையுள்ள சித்தத்தின்படி நமக்காக ஒரு மீட்பின் திட்டத்தை நியமித்தார். அந்தத் திட்டத்தை அவர் இயேசு கிறிஸ்துவில் நிறைவேற்றி, நம்மைப் பாவத்திலிருந்து மீட்டு, இன்றும் பரிசுத்த ஆவியானவர் மூலமாக நம்மைப் பரிசுத்தமாக்கித் தமது கிருபையினால்  தொடர்ந்து நடத்தி வருகிறார். இந்தத் தியானத்தின் ஊடாக, கிறிஸ்துவுக்குள் நமக்குக் கிடைத்துள்ள புதிய அடையாளத்தையும், அவர் நமக்குக் கொடுத்துள்ள உன்னதமான பணியையும், நித்திய நம்பிக்கையையும் விரிவாகத் தியானிக்கப்போகிறோம்.
 
-
-
-
-
-சிருஷ்டிப்பு
-
-தேவனுடைய பூரணமான படைப்பும் நோக்கமும்
-
-
+### 1. சிருஷ்டிப்பு: தேவனுடைய பூரணமான படைப்பும் நோக்கமும்
 
 தேவன் ஒருவரே சர்வத்தையும் சிருஷ்டித்த சிருஷ்டி கர்த்தர். பரிசுத்த வேதாகமம் ஆரம்பிக்கும் பொழுதே “ஆதியிலே தேவன் வானத்தையும் பூமியையும் சிருஷ்டித்தார்.” (ஆதி 1:1) என்று கூறுகிறது. "சகலமும் அவர் மூலமாய் உண்டாயிற்று; உண்டானதொன்றும் அவராலேயல்லாமல் உண்டாகவில்லை." (யோவா 1:3) அனைத்தும் அவரிடமிருந்தே தொடங்குகின்றன. அவர் ஒருவரே நித்தியமானவர், சுயம்புவானவர் (Self-Existent) மற்றும் சர்வவல்லமையுள்ளவர். "கர்த்தருடையவார்த்தையினால் வானங்களும், அவருடைய வாயின் சுவாசத்தினால் அவைகளின் சர்வசேனையும் உண்டாக்கப்பட்டது." (சங் 33:6).   
 
@@ -27,31 +24,19 @@ image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 
 தேவன் மனிதகுலத்திற்கு 'சுயாதீன விருப்பம்' (Free will) அதாவது அவரை நேசிப்பதற்கும் அவருக்குக் கீழ்ப்படிவதற்கும் தேர்ந்தெடுக்கும் திறனையும் அளித்தார். "தேவனாகியகர்த்தர்மனுஷனை நோக்கி: நீ தோட்டத்திலுள்ள சகல விருட்சத்தின் கனியையும் புசிக்கவே புசிக்கலாம். ஆனாலும் நன்மை தீமை அறியத்தக்க விருட்சத்தின் கனியைப் புசிக்கவேண்டாம்; அதை நீ புசிக்கும் நாளில் சாகவே சாவாய் என்று கட்டளையிட்டார்." (ஆதி 2:16–17). தேவன் கட்டாயப்படுத்தப்பட்ட கீழ்ப்படிதலை அல்ல, மாறாக விருப்பத்துடன்கூடிய கீழ்ப்படிதலையும் அன்பின் அடிப்படையிலான உறவையும் விரும்பினார். "நீங்கள் என்னிடத்தில் அன்பாயிருந்தால் என் கற்பனைகளைக் கைக்கொள்ளுங்கள்." (யோவா 14:15), "நீ உன் தேவனாகியகர்த்தரிடத்தில் உன் முழு இருதயத்தோடும், உன் முழு ஆத்துமாவோடும், உன் முழுப் பலத்தோடும் அன்புகூருவாயாக." (உபா 6:5).
 
-
-
 அனைத்தையும் படைத்த பிறகு, தேவன் தமது கிரியைகளை பூரணமானவை என்றும் நல்லவை என்றும் அறிவித்தார். "அப்பொழுது தேவன் தாம் உண்டாக்கின எல்லாவற்றையும் பார்த்தார், அது மிகவும் நன்றாயிருந்தது." (ஆதி 1:31). அங்கே பாவமும் மரணமும் இருக்கவில்லை; அங்கே சமாதானமும், சந்தோஷமும் மட்டுமே இருந்தது. தேவன் படைத்த அனைத்தும் நன்றாக இருந்தது, பாவம் உலகில் நுழையும் வரை மனிதகுலம் அவருடன் பூரண ஐக்கியத்தில் வாழ்ந்தது.  
 
 
 
-சிந்தனை  
+> பிரபஞ்சமும் நாம் அதில் காணும் அனைத்தும் உருவாவதற்கு முன்னரே தேவன் இருந்தார், அவர் நித்தியமானவர், தமக்குள்ளேயே நிறைவானவர் மற்றும் மகிமை பொருந்தியவர். அவர் ஏதோ ஒரு தேவையினால் எதையும் படைக்கவில்லை, மாறாகத் தமது சுபாவத்தின் அளவற்ற நன்மையினால் அனைத்தையும் படைத்தார். படைக்கப்பட்ட ஒவோன்றும் அவருடைய மகிமையை அறிவிக்கவே இருக்கின்றன (சங் 19:1).  
+>
+> அவருடைய சாயலில் படைக்கப்பட்டவர்களாகிய நாம், நமது வாழ்வின் மூலமும், இந்தப் படைப்புகளை ஆளுவதன் மூலமும் அவருடைய குணாதிசயங்களை பிரதிபலிக்கப் படைக்கப்பட்டோம். நமது நோக்கம் சுய திருப்தி அல்ல, மாறாக தேவனை மகிமைப்படுத்துவதே ஆகும். நாம் அவருடைய மகிமைக்காக வாழும்போதுதான், நமது ஆழமான மகிழ்ச்சியையும் நோக்கத்தையும் வாழ்க்கையின் அர்த்தத்தையும் கண்டடைய முடியும்.  
+>
+> ஒரு நிமிடம் சிந்தித்து பாப்போம், இந்தப் பிரபஞ்சத்தைப் படைத்தவர் எம்மை ஒரு நோக்கத்தோடு, தமது சாயலில், தமக்காக உருவாக்கினார். இந்த உலகில் எங்களை ஒரு உரிமையாளராக அல்ல, மாறாக ஒரு பொறுப்பாளராக (Steward) அவர் வைத்திருக்கிறார். எங்கள் மதிப்பு நாங்கள் எதைச் சாதிக்கிறோம் என்பதில் அல்ல மாறாக, நாங்கள் தேவனால், அவருடைய சாயலில், அவருக்காகவே உருவாக்கப்பட்டிருக்கிறோம் என்ற உண்மையிலே உள்ளது (கொலோ 1:16).
 
-பிரபஞ்சமும் நாம் அதில் காணும் அனைத்தும் உருவாவதற்கு முன்னரே தேவன் இருந்தார், அவர் நித்தியமானவர், தமக்குள்ளேயே நிறைவானவர் மற்றும் மகிமை பொருந்தியவர். அவர் ஏதோ ஒரு தேவையினால் எதையும் படைக்கவில்லை, மாறாகத் தமது சுபாவத்தின் அளவற்ற நன்மையினால் அனைத்தையும் படைத்தார். படைக்கப்பட்ட ஒவோன்றும் அவருடைய மகிமையை அறிவிக்கவே இருக்கின்றன (சங் 19:1).  
-
-அவருடைய சாயலில் படைக்கப்பட்டவர்களாகிய நாம், நமது வாழ்வின் மூலமும், இந்தப் படைப்புகளை ஆளுவதன் மூலமும் அவருடைய குணாதிசயங்களை பிரதிபலிக்கப் படைக்கப்பட்டோம். நமது நோக்கம் சுய திருப்தி அல்ல, மாறாக தேவனை மகிமைப்படுத்துவதே ஆகும். நாம் அவருடைய மகிமைக்காக வாழும்போதுதான், நமது ஆழமான மகிழ்ச்சியையும் நோக்கத்தையும் வாழ்க்கையின் அர்த்தத்தையும் கண்டடைய முடியும்.  
-
-ஒரு நிமிடம் சிந்தித்து பாப்போம், இந்தப் பிரபஞ்சத்தைப் படைத்தவர் எம்மை ஒரு நோக்கத்தோடு, தமது சாயலில், தமக்காக உருவாக்கினார். இந்த உலகில் எங்களை ஒரு உரிமையாளராக அல்ல, மாறாக ஒரு பொறுப்பாளராக (Steward) அவர் வைத்திருக்கிறார். எங்கள் மதிப்பு நாங்கள் எதைச் சாதிக்கிறோம் என்பதில் அல்ல மாறாக, நாங்கள் தேவனால், அவருடைய சாயலில், அவருக்காகவே உருவாக்கப்பட்டிருக்கிறோம் என்ற உண்மையிலே உள்ளது (கொலோ 1:16).
-
-
-
-
-
-வீழ்ச்சி
-
-தேவமகிமையின் இழப்பும் கறைபட்ட சுபாவமும்
+### 2. வீழ்ச்சி: தேவமகிமையின் இழப்பும் கறைபட்ட சுபாவமும்
 
 தேவன் உலகத்தைப் பூரணமானதாகவும் நல்லதாகவும் படைத்தார் என்று பார்த்தோம், ஆனால் மனிதகுலம் அந்த நிலையிலேயே நிலைத்திருக்கவில்லை. ஏதேன் தோட்டத்தில், ஆதாமும் ஏவாளும் தேவனுடைய தெளிவான கட்டளைக்குக் கீழ்ப்படியாமல் போனார்கள். சர்ப்பத்தினால் (சாத்தானினால்) சோதிக்கப்பட்ட அவர்கள், தேவனை நம்பி கீழ்ப்படிவதத்கு பதிலாகத் தங்களையே நம்பத் தேர்ந்தெடுத்தனர் "அப்பொழுது ஸ்திரீயானவள், அந்த விருட்சம் புசிப்புக்கு நல்லதும், பார்வைக்கு இன்பமும், புத்தியைத் தெளிவிக்கிறதற்கு இச்சிக்கப்படத்தக்க விருட்சமுமாய் இருக்கிறது என்று கண்டு, அதின் கனியைப் பறித்து, புசித்து, தன் புருஷனுக்கும் கொடுத்தாள்; அவனும் புசித்தான்." (ஆதி 3:6). இந்த கீழ்ப்படியாமையின் செயல் பேரழிவு தரும் விளைவுகளைக் கொண்டுவந்தது. இந்த ஒரு பாவத்தின் மூலம், படைப்பிற்குள் சாபம் நுழைந்தது என்றும், அதைத் தொடர்ந்து மரணம் வந்தது என்றும் வேதாகமம் கூறுகிறது. "இப்படியாக, ஒரே மனுஷனாலே பாவமும் பாவத்தினாலே மரணமும் உலகத்திலே பிரவேசித்ததுபோலவும், எல்லா மனுஷரும் பாவஞ்செய்தபடியால், மரணம் எல்லாருக்கும் வந்ததுபோலவும் இதுவுமாயிற்று." (ரோம 5:12).
-
-
 
 வீழ்ச்சி என்பது ஒரு சிறிய தவறால் நடந்த ஒன்று அல்ல. அது தேவனுடைய அதிகாரத்தை நிராகரித்ததின் விளைவு. இதன் விளைவாக, பாவம் மனித சுபாவத்தின் ஒவ்வொரு பகுதியையும் சீர்கெடுத்ததுடன், முழுப் படைப்பையும் பாதித்தது. வேதனை, துன்பம், முறிந்த உறவுகள் மற்றும் உடல் ரீதியான மரணம் ஆகியவை உலகில் நுழைந்தன (ஆதி 3:16–19). அந்தத் தருணத்திலிருந்து, எல்லா மக்களும் பாவத்தின் அதிகாரத்தின் கீழ் பிறந்தனர். "எல்லாரும் பாவஞ்செய்து, தேவமகிமையற்றவர்களாகி." (ரோம 3:23).
 
@@ -59,15 +44,9 @@ image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 
 
 
-சிந்தனை
+> பாவம் என்பது நாம் செய்யும் தற்செயலான தவறல்ல; அது வீழ்ச்சியின் விளைவாக நமது சுபாவத்திற்குள்ளேயே ஊடுருவிய ஆழமான சீர்கேடு ஆகும். நாம் பாவம் செய்வதால் பாவிகளாக மாறவில்லை, மாறாகப் பாவச் சுபாவத்துடன் பிறந்திருப்பதாலேயே பாவம் செய்கிறோம் என்பதை வேதாகமம் நமக்கு கூறுகிறது. இன்று உலகிலும் நமக்குள்ளும் நாம் காணும் அனைத்து சீர்கேடுகளுக்கும் இந்த வீழ்ச்சியே உண்மையான காரணமாகும். இந்த ஆவிக்குரிய வீழ்ச்சியைப் புரிந்துகொள்வது, ஏன் இந்த சபிக்கப்பட்ட உலகத்தால் தன்னைத்தானே மீட்டெடுத்துக் கொள்ள முடியாது என்பதையும், மனிதனுடைய தீர்வுகள் மற்றும் முயற்சிகள் ஏன் எப்போதும் குறைவுள்ளவையாகவே இருக்கின்றன என்பதையும் உணர உதவுகிறது.
 
-பாவம் என்பது நாம் செய்யும் தற்செயலான தவறல்ல; அது வீழ்ச்சியின் விளைவாக நமது சுபாவத்திற்குள்ளேயே ஊடுருவிய ஆழமான சீர்கேடு ஆகும். நாம் பாவம் செய்வதால் பாவிகளாக மாறவில்லை, மாறாகப் பாவச் சுபாவத்துடன் பிறந்திருப்பதாலேயே பாவம் செய்கிறோம் என்பதை வேதாகமம் நமக்கு கூறுகிறது. இன்று உலகிலும் நமக்குள்ளும் நாம் காணும் அனைத்து சீர்கேடுகளுக்கும் இந்த வீழ்ச்சியே உண்மையான காரணமாகும். இந்த ஆவிக்குரிய வீழ்ச்சியைப் புரிந்துகொள்வது, ஏன் இந்த சபிக்கப்பட்ட உலகத்தால் தன்னைத்தானே மீட்டெடுத்துக் கொள்ள முடியாது என்பதையும், மனிதனுடைய தீர்வுகள் மற்றும் முயற்சிகள் ஏன் எப்போதும் குறைவுள்ளவையாகவே இருக்கின்றன என்பதையும் உணர உதவுகிறது.
-
-
-
-ஆவிக்குரிய மரணம்
-
-பாவத்தின் அடிமைத்தனமும் அந்தகார நிலையும்
+### 3. ஆவிக்குரிய மரணம்: பாவத்தின் அடிமைத்தனமும் அந்தகார நிலையும்
 
 வீழ்ச்சியின் காரணமாக, மனிதகுலத்தின் நிலை நாம் நினைப்பதை விட மிகவும் மோசமானதாக இருக்கிறது. வேதாகமம் நம்மை ஆவிக்குரிய ரீதியில் மரித்தவர்கள் என்று வர்ணிக்கிறது; நாம் வெறும் நோயுற்றவர்களோ அல்லது பலவீனமானவர்களோ அல்ல. அக்கிரமங்களினாலும் பாவங்களினாலும் மரித்தவர்களாயிருந்த உங்களை உயிர்ப்பித்தார்." (எபே 2:1). ஆவிக்குரிய மரணம் என்பது தேவனிடமிருந்து பிரிந்திருப்பதையும், நம்மை நாமே மீண்டும் அவரிடம் சேர்த்துக்கொள்ளும் திறனை முற்றிலும் இழந்துவிட்டதையும் குறிக்கிறது.
 
@@ -79,15 +58,9 @@ image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 
 
 
-சிந்தனை
+> இந்த உண்மை நம்முடைய ஒன்றுக்கும் உதவாத நிலைமையை காட்டுகிறது. ஆவிக்குரிய மரணம் என்பது ஆதாமின் பாவத்தால் விளைந்த ஆழமான பிரிவினையாகும். இது மனிதனை ஆவிக்குரிய ரீதியில் உயிரற்றவனாகவும், பாவத்திற்கு அடிமையானவனாகவும் மாற்றியுள்ளது. ஒரு பிணத்தைப் போல, மனிதன் தானாகத் தேவனைத் தேடவோ அல்லது அவரிடம் திரும்பவோ முடியாத தார்மீக இயலாமையில் இருக்கிறான். இந்த நிலையில் இருக்கும் ஒரு மனிதன் மீட்பு பெற வேண்டுமானால், தேவனுடைய புதுப்பிக்கும் வல்லமையானது அவனுக்குள் செயல்படுவது அவசியமாகிறது. தேவன் நம்மை உயிர்ப்பித்தால் மட்டுமே நம்மால் விசுவாசிக்கவும், புதிய ஜீவனைப் பெற்றுக்கொள்ளவும் முடியும்.
 
-இந்த உண்மை நம்முடைய ஒன்றுக்கும் உதவாத நிலைமையை காட்டுகிறது. ஆவிக்குரிய மரணம் என்பது ஆதாமின் பாவத்தால் விளைந்த ஆழமான பிரிவினையாகும். இது மனிதனை ஆவிக்குரிய ரீதியில் உயிரற்றவனாகவும், பாவத்திற்கு அடிமையானவனாகவும் மாற்றியுள்ளது. ஒரு பிணத்தைப் போல, மனிதன் தானாகத் தேவனைத் தேடவோ அல்லது அவரிடம் திரும்பவோ முடியாத தார்மீக இயலாமையில் இருக்கிறான். இந்த நிலையில் இருக்கும் ஒரு மனிதன் மீட்பு பெற வேண்டுமானால், தேவனுடைய புதுப்பிக்கும் வல்லமையானது அவனுக்குள் செயல்படுவது அவசியமாகிறது. தேவன் நம்மை உயிர்ப்பித்தால் மட்டுமே நம்மால் விசுவாசிக்கவும், புதிய ஜீவனைப் பெற்றுக்கொள்ளவும் முடியும்.
-
-
-
-வாக்குத்தத்தம்
-
-இரட்சகர் குறித்த நிழல்களும் தீர்க்கதரிசனங்களும்
+### 4. வாக்குத்தத்தம்: இரட்சகர் குறித்த நிழல்களும் தீர்க்கதரிசனங்களும்
 
 மரித்த நிலையில் இருக்கும் நம்மைத் தேவன் உயிர்ப்பித்தால் ஒழிய நமக்கு மீட்பு சாத்தியமில்லை என்று பார்த்தோம். உலகில் பாவம் நுழைந்த அந்தத் தருணத்திலேயே, தேவன் தமது மீட்பின் திட்டத்தை வெளிப்படுத்தினார். வீழ்ச்சி நடந்த அந்த நாளிலேயே, ஸ்திரீயின் வித்தானது சாத்தானின் தலையை நசுக்கி, பாவத்தின் சாபத்தை அழிக்கும் என்ற முதல் சுவிசேஷ வாக்குறுதியை தேவன் அளித்தார் (ஆதி 3:15). அந்தத் தருணத்திலிருந்து, தேவன் மனித வரலாற்றின் நிஜ நிகழ்வுகள் மற்றும் உடன்படிக்கைகள் வழியாகத் தமது இரட்சிப்பின் திட்டத்தைப் படிப்படியாக வெளிப்படுத்தினார்.
 
@@ -105,13 +78,9 @@ image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 
 
 
-சிந்தனை
+> தேவனுடைய மீட்பின் திட்டம், இரட்சகர் தோன்றுவதற்கு ஆயிரக்கணக்கான ஆண்டுகளுக்கு முன்பே வரலாற்றில் பின்னிப் பிணைக்கப்பட்டிருந்தது. இது இரட்சிப்பு என்பது மனிதனின் தேடல் அல்ல, மாறாகத் தேவன் மனிதனைத் தேடி வரும் செயல் என்பதை நினைவூட்டுகிறது. தேவன் எவ்வளவு கவனமாகவும் உண்மையாகவும் வழியை ஆயத்தப்படுத்தினார் என்பதை நாம் காணும்போது, அவருடைய வாக்குத்தத்தங்கள் ஒருபோதும் தவறுவதில்லை என்ற நமது விசுவாசம் உறுதிப்படுகிறது.
 
-தேவனுடைய மீட்பின் திட்டம், இரட்சகர் தோன்றுவதற்கு ஆயிரக்கணக்கான ஆண்டுகளுக்கு முன்பே வரலாற்றில் பின்னிப் பிணைக்கப்பட்டிருந்தது. இது இரட்சிப்பு என்பது மனிதனின் தேடல் அல்ல, மாறாகத் தேவன் மனிதனைத் தேடி வரும் செயல் என்பதை நினைவூட்டுகிறது. தேவன் எவ்வளவு கவனமாகவும் உண்மையாகவும் வழியை ஆயத்தப்படுத்தினார் என்பதை நாம் காணும்போது, அவருடைய வாக்குத்தத்தங்கள் ஒருபோதும் தவறுவதில்லை என்ற நமது விசுவாசம் உறுதிப்படுகிறது.
-
-
-
-மேசியா: வாக்குத்தத்தம் பண்ணப்பட்ட இரட்சகராகிய இயேசு கிறிஸ்து
+### 5. மேசியா: வாக்குத்தத்தம் பண்ணப்பட்ட இரட்சகராகிய இயேசு கிறிஸ்து
 
 காலம் நிறைவேறினபோது, தேவன் தமது நித்திய உடன்படிக்கையின் வாக்குத்தத்தங்களை நிறைவேற்றினார். வேதாகமத்தில் நிழல்களாகக் காண்பிக்கப்பட்ட இரட்சகர், வரலாற்றின் ஒரு குறிப்பிட்ட கட்டத்தில் மாம்சத்தில் வெளிப்பட்டார். இயேசு கிறிஸ்துவே வாக்குத்தத்தம் பண்ணப்பட்ட மேசியா; தீர்க்கதரிசிகளால் முன்னறிவிக்கப்பட்டவரும், உடன்படிக்கைகள் மற்றும் பலிகள் மூலம் நிழலாட்டங்களாகக் காண்பிக்கப்பட்ட நிஜமும் அவரே. அவர் ஒரு கன்னிகையிடத்தில் பிறந்ததன் மூலம் (ஏசா 7:14), பாவ சுபாவமற்ற புதிய மனிதகுலத்தின் தொடக்கமாக வந்தார். அவர் முழுமையான தேவனாகவும் முழுமையான மனிதனாகவும் வெளிப்படுத்தப்பட்டார் (ஏசா 9:6; யோவா 1:1–14).
 
@@ -123,15 +92,9 @@ image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 
 
 
-சிந்தனை
+> இயேசு கிறிஸ்து வெறும் ஒரு போதகராக மட்டும் வரவில்லை; அவர் தமது ஜனங்களுக்கே "நீதியாகவே" மாறினார். தேவனுடைய உயர்ந்த பரிசுத்த தரத்திற்கு ஒருபோதும் கீழ்ப்படிய முடியாத பாவிகளுக்கு, கிறிஸ்துவின் இந்தப் பூரண கீழ்ப்படிதலே நித்திய நம்பிக்கையாய் இருக்கிறது. நாம் விசுவாசத்தினாலே கிறிஸ்துவைப்பற்றிக்கொள்ளும்போது, நம்முடைய பாவங்களும் தோல்விகளும் அவருடைய கணக்கிலும், அவருடைய பூரண நீதியும் வெற்றியும் நம்முடைய கணக்கிலும் ஏற்றப்படுகிறது. இந்த "மகத்துவமான பரிமாற்றமே" நற்செய்தியின் சாரம்; இதினாலே நாம் தகுதியற்றவர்களாயிருந்தும், கிறிஸ்துவுக்குள் தேவனுக்கு முன்பாக நீதிமான்களாக நிற்கிறோம்.
 
-இயேசு கிறிஸ்து வெறும் ஒரு போதகராக மட்டும் வரவில்லை; அவர் தமது ஜனங்களுக்கே "நீதியாகவே" மாறினார். தேவனுடைய உயர்ந்த பரிசுத்த தரத்திற்கு ஒருபோதும் கீழ்ப்படிய முடியாத பாவிகளுக்கு, கிறிஸ்துவின் இந்தப் பூரண கீழ்ப்படிதலே நித்திய நம்பிக்கையாய் இருக்கிறது. நாம் விசுவாசத்தினாலே கிறிஸ்துவைப்பற்றிக்கொள்ளும்போது, நம்முடைய பாவங்களும் தோல்விகளும் அவருடைய கணக்கிலும், அவருடைய பூரண நீதியும் வெற்றியும் நம்முடைய கணக்கிலும் ஏற்றப்படுகிறது. இந்த "மகத்துவமான பரிமாற்றமே" நற்செய்தியின் சாரம்; இதினாலே நாம் தகுதியற்றவர்களாயிருந்தும், கிறிஸ்துவுக்குள் தேவனுக்கு முன்பாக நீதிமான்களாக நிற்கிறோம்.
-
-
-
-
-
-சிலுவை: பாவநிவாரண பலியும் ஒப்புரவாக்குதலின் விலையும்
+### 6. சிலுவை: பாவநிவாரண பலியும் ஒப்புரவாக்குதலின் விலையும்
 
 இயேசு வாழ்ந்த அந்தப் பூரண கீழ்ப்படிதலுள்ள வாழ்க்கை, பிதாவினுடைய திட்டத்தின்படியே அவரைச் சிலுவையை நோக்கி வழிநடத்தியது. சிலுவை என்பது ஏதோ ஒரு விபத்தோ அல்லது சோகமான நிகழ்வோ அல்ல, அது இரட்சிப்பிற்காக தேவனால் நியமிக்கப்பட்ட ஒரே வழியாகும். இயேசு எல்லாவற்றிலும் பிதாவுக்கு மனப்பூர்வமாகக் கீழ்ப்படிந்தார், மரணம் வரைக்கும் அவர் கீழ்ப்படிந்தவரானார் (பிலி 2:8). பழைய ஏற்பாட்டுப் பலிகள் அனைத்தும் எதைச் சுட்டிக்காட்டினவோ, அந்தப் பூரணமான "தேவ ஆட்டுக்குட்டியாகவே" அவர் பலிபீடத்திற்குச் சென்றார் (யோவா 1:29).
 
@@ -145,11 +108,9 @@ image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 
 
 
-சிந்தனை
+> பாவத்தின் கொடூரத்தையும், தேவனுடைய அளவிட முடியாத கிருபையையும் சிலுவை நமக்கு ஒரே நேரத்தில் படம்பிடித்துக் காட்டுகிறது. நம்முடைய மன்னிப்பைச் சம்பாதிக்க நம்மிடம் எவ்விதத் தகுதியும் இல்லை; மாறாக, இயேசு கிறிஸ்து நமக்காகப் பிதாவினால் கைவிடப்படுவதையும், மரணத்தையும் ஏற்றுக்கொண்டு, தமது விலையேறப்பெற்ற இரத்தத்தினால் நம்மை மீட்டெடுத்தார். நாம் அவரை விசுவாசத்தினால் பற்றிக்கொள்ளும்போது, நம்முடைய பாவ அழுக்குகள் நீக்கப்பட்டு, அவருடைய பூரண நீதி நமக்கு ஒரு ஆடையாக உடுத்தப்படுகிறது. இப்போது தேவன் நம்மைப் பார்க்கும்போது, நம்முடைய தோல்விகளைப் பார்க்காமல், சிலுவையில் நம்மைத் தேவனோடு ஒப்புரவாக்கிய கிறிஸ்துவின் வெற்றியையே காண்கிறார். இந்த "மகத்துவமான பரிமாற்றத்தினால்" நாம் இப்போது முழுமையாக ஏற்றுக்கொள்ளப்பட்ட பிள்ளைகளாய், தேவனுடைய சமூகத்தில் எவ்வித அச்சமுமின்றி நிற்கிறோம்.
 
-பாவத்தின் கொடூரத்தையும், தேவனுடைய அளவிட முடியாத கிருபையையும் சிலுவை நமக்கு ஒரே நேரத்தில் படம்பிடித்துக் காட்டுகிறது. நம்முடைய மன்னிப்பைச் சம்பாதிக்க நம்மிடம் எவ்விதத் தகுதியும் இல்லை; மாறாக, இயேசு கிறிஸ்து நமக்காகப் பிதாவினால் கைவிடப்படுவதையும், மரணத்தையும் ஏற்றுக்கொண்டு, தமது விலையேறப்பெற்ற இரத்தத்தினால் நம்மை மீட்டெடுத்தார். நாம் அவரை விசுவாசத்தினால் பற்றிக்கொள்ளும்போது, நம்முடைய பாவ அழுக்குகள் நீக்கப்பட்டு, அவருடைய பூரண நீதி நமக்கு ஒரு ஆடையாக உடுத்தப்படுகிறது. இப்போது தேவன் நம்மைப் பார்க்கும்போது, நம்முடைய தோல்விகளைப் பார்க்காமல், சிலுவையில் நம்மைத் தேவனோடு ஒப்புரவாக்கிய கிறிஸ்துவின் வெற்றியையே காண்கிறார். இந்த "மகத்துவமான பரிமாற்றத்தினால்" நாம் இப்போது முழுமையாக ஏற்றுக்கொள்ளப்பட்ட பிள்ளைகளாய், தேவனுடைய சமூகத்தில் எவ்வித அச்சமுமின்றி நிற்கிறோம்.
-
-உயிர்த்தெழுதல்: மரணத்தின் மீதான வெற்றியும் புதிய ஜீவனும்
+### 7. உயிர்த்தெழுதல்: மரணத்தின் மீதான வெற்றியும் புதிய ஜீவனும்
 
 இயேசு சிலுவையில் மரித்தபோது நமது பாவத்திற்கான தண்டனை முழுமையாகச் செலுத்தப்பட்டது உண்மைதான். ஆனால், அவர் கல்லறையிலேயே தங்கியிருந்தால் நமக்கு பாவத்தின் மீதோ அல்லது மரணத்தின் மீதோ எவ்வித வெற்றியும் இருந்திருக்காது. அப்போஸ்தலனாகிய பவுல் சொல்லுகிறபடி, "கிறிஸ்து உயிர்த்தெழவில்லை என்றால், உங்கள் விசுவாசம் வீணாயிருக்கும்; நீங்கள் இன்னும் உங்கள் பாவங்களிலேயே இருப்பீர்கள்" (1 கொரி 15:17). எனவே, நமது இரட்சிப்பு முழுமையடைய உயிர்த்தெழுதல் மிக மிக அவசியமானது.
 
@@ -161,13 +122,9 @@ image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 
 
 
-சிந்தனை
+> உயிர்த்தெழுதல் நமக்கு ஒரு புதிய அடையாளத்தைத் தருகிறது. நாம் இனி பாவத்தால் ஆளப்படுகிறவர்கள் அல்ல, உயிர்த்தெழுந்த கிறிஸ்துவின் வல்லமையால் ஆளப்படுகிறவர்கள். மரணம் அதன் கூர்மையை இழந்தது, பாவம் அதன் அதிகாரத்தை இழந்தது. கிறிஸ்து நமக்காக உயிர்த்தெழுந்ததால், நாமும் ஒவ்வொரு நாளும் பாவத்திற்கு மரித்து, நீதிக்கென்று பிழைத்திருக்கும் புதிய வாழ்வின் விடுதலையை அனுபவிக்கிறோம்.
 
-உயிர்த்தெழுதல் நமக்கு ஒரு புதிய அடையாளத்தைத் தருகிறது. நாம் இனி பாவத்தால் ஆளப்படுகிறவர்கள் அல்ல, உயிர்த்தெழுந்த கிறிஸ்துவின் வல்லமையால் ஆளப்படுகிறவர்கள். மரணம் அதன் கூர்மையை இழந்தது, பாவம் அதன் அதிகாரத்தை இழந்தது. கிறிஸ்து நமக்காக உயிர்த்தெழுந்ததால், நாமும் ஒவ்வொரு நாளும் பாவத்திற்கு மரித்து, நீதிக்கென்று பிழைத்திருக்கும் புதிய வாழ்வின் விடுதலையை அனுபவிக்கிறோம்.
-
-
-
-புத்திரசுவிகாரம்: தேவனுடைய பிள்ளைகள் என்ற புதிய அடையாளம்
+### 8. புத்திரசுவிகாரம்: தேவனுடைய பிள்ளைகள் என்ற புதிய அடையாளம்
 
 கிறிஸ்து நிறைவேற்றி முடித்த கிரியையினால், அவரை விசுவாசிக்கிறவர்களுக்கு முற்றிலும் புதிய அடையாளம் வழங்கப்படுகிறது. நாம் இனி தண்டனைக்குரிய பாவிகளோ அல்லது பயத்திற்கு அடிமைகளோ அல்ல; நாம் இப்போது மகா உன்னதமான தேவனுடைய பிள்ளைகள். "அவருடைய நாமத்தின்மேல் விசுவாசமுள்ளவர்களாய் அவரை ஏற்றுக்கொண்டவர்கள் எத்தனைபேர்களோ, அத்தனைபேர்களும் தேவனுடைய பிள்ளைகளாகும்படி, அவர்களுக்கு அதிகாரங்கொடுத்தார்" (யோவா 1:12). இந்த அடையாளம் நமது கிரியைகளால் வந்ததல்ல, கிறிஸ்துவின் கிருபையினால் நமக்குக் கொடுக்கப்பட்ட சிலாக்கியமாகும்.
 
@@ -185,13 +142,9 @@ image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 
 
 
-சிந்தனை
+> நாம் தேவனுடைய பிள்ளைகள் மற்றும் பரலோகக் குடிமக்கள் என்று அறிந்துகொள்வது நமது வாழ்க்கை முறையை முழுமையாக மாற்றுகிறது. நாம் ஒரு எஜமானுக்குப் பயந்து கீழ்ப்படியும் அடிமைகளைப் போலல்லாமல், ஒரு பிதாவை நேசிக்கும் பிள்ளைகளாக அன்பினால் அவருக்குக் கீழ்ப்படிகிறோம். இந்த உலகம் நமக்கு நிரந்தரமானது அல்ல; நமது இரட்சகர் நமக்காக ஆயத்தம் செய்துள்ள நித்திய வீட்டிற்கு நாம் பிரயாணம் செய்துகொண்டிருக்கிறோம். நமக்குள் இருக்கும் பரிசுத்த ஆவியானவர் நாம் தனியாக இல்லை என்பதையும், நமது அடையாளம் கிறிஸ்துவின் கிருபையில் பாதுகாப்பாக இருக்கிறது என்பதையும் ஒவ்வொரு நாளும் நமக்கு உறுதிப்படுத்துகிறார்.
 
-நாம் தேவனுடைய பிள்ளைகள் மற்றும் பரலோகக் குடிமக்கள் என்று அறிந்துகொள்வது நமது வாழ்க்கை முறையை முழுமையாக மாற்றுகிறது. நாம் ஒரு எஜமானுக்குப் பயந்து கீழ்ப்படியும் அடிமைகளைப் போலல்லாமல், ஒரு பிதாவை நேசிக்கும் பிள்ளைகளாக அன்பினால் அவருக்குக் கீழ்ப்படிகிறோம். இந்த உலகம் நமக்கு நிரந்தரமானது அல்ல; நமது இரட்சகர் நமக்காக ஆயத்தம் செய்துள்ள நித்திய வீட்டிற்கு நாம் பிரயாணம் செய்துகொண்டிருக்கிறோம். நமக்குள் இருக்கும் பரிசுத்த ஆவியானவர் நாம் தனியாக இல்லை என்பதையும், நமது அடையாளம் கிறிஸ்துவின் கிருபையில் பாதுகாப்பாக இருக்கிறது என்பதையும் ஒவ்வொரு நாளும் நமக்கு உறுதிப்படுத்துகிறார்.
-
-
-
-கிறிஸ்தவ வாழ்க்கை: கிறிஸ்துவின் சாயலில் வளரும் ஆவிக்குரிய போராட்டம்
+### 9. கிறிஸ்தவ வாழ்க்கை: கிறிஸ்துவின் சாயலில் வளரும் ஆவிக்குரிய போராட்டம்
 
 இரட்சிப்பு என்பது தேவனுக்கு முன்பாக ஒரு விசுவாசியின் நிலையை என்றென்றைக்குமாக மாற்றுகிறது. விசுவாசத்தின் மூலம் நாம் குற்றமற்றவர்கள் என்று தேவன் அளிக்கும் ஒருமுறை பிரகடனமாகிய நீதிமானாக்குதல் (Justification) மற்றும் நாம் வாழ்நாள் முழுவதும் ஆவியானவரின் துணைக்கொண்டு கிறிஸ்துவின் சாயலுக்கு ஒப்பாக மாறும் பரிசுத்தமாக்கப்படுதல் (Sanctification) ஆகிய இரு நிலைகளையும் இரட்சிப்பு உள்ளடக்கியுள்ளது. நீதிமானாக்கப்படுதல் பாவத்தின் தண்டனையிலிருந்து நமக்கு உடனடி விடுதலையைத் தருகிறது, பரிசுத்தமாக்கப்படுதல் பாவத்தின் வல்லமையிலிருந்து நம்மைப் படிப்படியாக விடுவிக்கிறது. இது வெறும் ஆசீர்வாதம் மட்டுமல்ல, கிறிஸ்துவின் பூரணத்துவத்தை நோக்கி ஓடும் ஒரு பயணமாகும். இதில் நாம் கிறிஸ்துவோடு கூட "சிலுவையைச் சுமக்கவும்", உலகத்தின் இச்சைகளைத் தியாகம் செய்து அவரோடு கூட பாடுபடவும் அழைக்கப்பட்டுள்ளோம்.
 
@@ -205,17 +158,11 @@ image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 
 தேவன் நம்மை நற்கிரியைகளைச் செய்கிறதற்காகவே கிறிஸ்துவுக்குள் மீண்டும் சிருஷ்டித்திருக்கிறார் (எபே 2:10). நமது சொந்தப் பலத்தால் நம்மால் வெற்றி பெற முடியாது, ஆனால் கிறிஸ்துவில் நாம் நிலைத்திருக்கும்போது அவர் மிகுந்த கனிகளைத் தருகிறார். நமது பலவீனமான நேரங்களில், தேவனே தமது தயவுள்ள சித்தத்தின்படி விருப்பத்தையும் செய்கையையும் நமக்குள் உண்டாக்குகிறார் (பிலி 2:13).
 
+> கிறிஸ்தவ வாழ்க்கை என்பது கிறிஸ்துவின் பூரணத்துவத்தை நோக்கிய ஒரு தீவிரமான ஓட்டம். நாம் இந்த மாம்சத்தில் இருக்கும் வரை அந்த முழுமையை எட்டாதவர்களாகத் தோன்றினாலும், நம்முடைய ஒவ்வொரு நாளின் இலக்கும் கிறிஸ்துவின் நிறைவான வளர்ச்சியின் அளவுக்குத்தக்கதாக ஒரு பூரண புருஷனாகும்படிக்கு நாம் வளருவதே ஆகும் (எபே 4:13).
+>
+> எனவே, நாம் பாவத்துடன் போராடும்போது, அதை ஒரு சாதாரண பலவீனமாகக் கருதி சமாதானமடையாமல், அதிலிருந்து முழுமையான விடுதலை பெற்று கிறிஸ்துவைப் போலப் பூரணமாக மாறப் போராடுகிறோம். கிறிஸ்துவோடு பாடுபடுவதையும், உலகத்தைத் துறப்பதையும் ஒரு பாரமாக எண்ணாமல், அது நம்மைப் பூரணத்துவத்திற்கு வழிநடத்தும் ஒரு சிலாக்கியமாக எண்ணி மகிழ்வோம். வளர்ச்சி மெதுவாக இருக்கலாம், ஆனால் நம்முடைய பார்வை எப்போதும் பூரணராகிய இயேசுவின் மேலேயே இருக்கட்டும். "பின்னானவைகளை மறந்து, முன்னானவைகளை நாடி, கிறிஸ்து இயேசுவுக்குள் தேவன் அழைத்த பரம அழைப்பின் பந்தயப்பொருளுக்காக இலக்கை நோக்கித் தொடருகிறேன்." (பிலி 3:13-14) என்ற பவுலின் வைராக்கியத்தோடு, ஒவ்வொரு நாளும் கிறிஸ்துவின் சாயலில் இன்னும் முழுமையடைய முன்னேறுவோம்.
 
-
-சிந்தனை
-
-கிறிஸ்தவ வாழ்க்கை என்பது கிறிஸ்துவின் பூரணத்துவத்தை நோக்கிய ஒரு தீவிரமான ஓட்டம். நாம் இந்த மாம்சத்தில் இருக்கும் வரை அந்த முழுமையை எட்டாதவர்களாகத் தோன்றினாலும், நம்முடைய ஒவ்வொரு நாளின் இலக்கும் கிறிஸ்துவின் நிறைவான வளர்ச்சியின் அளவுக்குத்தக்கதாக ஒரு பூரண புருஷனாகும்படிக்கு நாம் வளருவதே ஆகும் (எபே 4:13).
-
-எனவே, நாம் பாவத்துடன் போராடும்போது, அதை ஒரு சாதாரண பலவீனமாகக் கருதி சமாதானமடையாமல், அதிலிருந்து முழுமையான விடுதலை பெற்று கிறிஸ்துவைப் போலப் பூரணமாக மாறப் போராடுகிறோம். கிறிஸ்துவோடு பாடுபடுவதையும், உலகத்தைத் துறப்பதையும் ஒரு பாரமாக எண்ணாமல், அது நம்மைப் பூரணத்துவத்திற்கு வழிநடத்தும் ஒரு சிலாக்கியமாக எண்ணி மகிழ்வோம். வளர்ச்சி மெதுவாக இருக்கலாம், ஆனால் நம்முடைய பார்வை எப்போதும் பூரணராகிய இயேசுவின் மேலேயே இருக்கட்டும். "பின்னானவைகளை மறந்து, முன்னானவைகளை நாடி, கிறிஸ்து இயேசுவுக்குள் தேவன் அழைத்த பரம அழைப்பின் பந்தயப்பொருளுக்காக இலக்கை நோக்கித் தொடருகிறேன்." (பிலி 3:13-14) என்ற பவுலின் வைராக்கியத்தோடு, ஒவ்வொரு நாளும் கிறிஸ்துவின் சாயலில் இன்னும் முழுமையடைய முன்னேறுவோம்.
-
-
-
-ஊழியம்: சுவிசேஷத்தின் அறிவிப்பும் நித்திய நம்பிக்கையும்
+### 10. ஊழியம்: சுவிசேஷத்தின் அறிவிப்பும் நித்திய நம்பிக்கையும்
 
 ஆதியிலே, தேவன் மனிதகுலத்தைத் தமது மகிமைக்காகவும் தம்மோடு ஐக்கியம் கொள்வதற்காகவும் படைத்தார். வீழ்ச்சியின் மூலம், பாவமும் மரணமும் உலகில் நுழைந்தன; இதனால் மனிதகுலம் தன்னைத்தானே இரட்சித்துக் கொள்ளும் திறனை இழந்தது. தமது இரக்கத்தினால், தேவன் ஒரு இரட்சகரை வாக்குறுதி அளித்தார், காலம் நிறைவேறினபோது அந்த இரட்சகர் வந்தார். அவருடைய பூரண வாழ்க்கை, பலி மரணம் மற்றும் வெற்றிகரமான உயிர்த்தெழுதலின் மூலம், விசுவாசிக்கிற அனைவருக்கும் இரட்சிப்பு முழுமையாக நிறைவேற்றப்பட்டது.
 
@@ -233,8 +180,4 @@ image: /uploads/chatgpt-image-jan-19-2026-08_01_02-am-1-.png
 
 இந்த நித்திய நம்பிக்கை விசுவாசிகளைத் தற்காலத்தில் விசுவாசத்தோடு வாழ பலப்படுத்துகிறது. தேவன் நமக்காக என்ன செய்தார், அவர் நம் மூலமாக என்ன செய்து கொண்டிருக்கிறார், எதை நிறைவேற்றுவதாக வாக்குறுதி அளித்துள்ளார் என்பதை அறிந்து, நாம் தைரியமாக நற்செய்தியைப் பிரகடனம் செய்கிறோம், மேலும் அதன் விளைவுகளைத் தேவனிடம் பொறுமையாக ஒப்படைக்கிறோம். கிறிஸ்து மீண்டும் வரும் வரை இந்தப் பணி தொடர்கிறது, மேலும் நித்திய ஜீவனின் நம்பிக்கை அந்த நாள் வரை நம்மைத் தாங்குகிறது.
 
-
-
-சிந்தனை
-
-சுவிசேஷம் அறிவிப்பது என்பது ஒரு பிச்சைக்காரன், தனக்கு உணவு கிடைத்த இடத்தைச் சக பிச்சைக்காரர்களுக்குச் சொல்வதைப் போன்றது. நாம் தகுதியற்றவர்களாய் இருந்தும் கிருபையினால் இரட்சிக்கப்பட்டோம். அதே கிருபை மற்றவர்களுக்கும் தேவை என்பதை நாம் மறக்கக் கூடாது. மக்கள் கேள்விப்படாமல் விசுவாசிக்க முடியாது; விசுவாசிக்காமல் இரட்சிக்கப்பட முடியாது. எனவே, கிறிஸ்துவின் அன்பினால் உந்தப்பட்டு, "இதோ, நான் இருக்கிறேன், என்னை அனுப்பும்" என்ற அர்ப்பணிப்போடு இந்த உலகிற்குச் சுவிசேஷத்தைக் கொண்டு செல்வோம்.
+> சுவிசேஷம் அறிவிப்பது என்பது ஒரு பிச்சைக்காரன், தனக்கு உணவு கிடைத்த இடத்தைச் சக பிச்சைக்காரர்களுக்குச் சொல்வதைப் போன்றது. நாம் தகுதியற்றவர்களாய் இருந்தும் கிருபையினால் இரட்சிக்கப்பட்டோம். அதே கிருபை மற்றவர்களுக்கும் தேவை என்பதை நாம் மறக்கக் கூடாது. மக்கள் கேள்விப்படாமல் விசுவாசிக்க முடியாது; விசுவாசிக்காமல் இரட்சிக்கப்பட முடியாது. எனவே, கிறிஸ்துவின் அன்பினால் உந்தப்பட்டு, "இதோ, நான் இருக்கிறேன், என்னை அனுப்பும்" என்ற அர்ப்பணிப்போடு இந்த உலகிற்குச் சுவிசேஷத்தைக் கொண்டு செல்வோம்.
