--- a/content/articles/2026-02-09-105721.md
+++ b/content/articles/2026-02-09-105721.md
@@ -15,7 +15,7 @@ summary: இவ்வுலகின் ஓட்டமும் பிரயா
   இவ்வேளையில், ஒருவன் தன் வாழ்வின் மெய்யான அர்த்தத்தை எங்கே கண்டடைவான்?
   அழியப்போகும் உலகத்திலே அழியாத நோக்கத்தையும், தேவன் அருளும் நித்திய
   நம்பிக்கையையும் குறித்த ஓர் ஆழமான சிந்தனை.
-image: /uploads/life.jpg
+image: /uploads/7d635575948e7cb7d12d0904a7ec851b.jpg
 ---
 அண்மையில் எனது சிறுவயது நண்பன், என்னை விட ஒரு வயது இளையவன், புற்றுநோயால் இறந்துவிட்டான். அவன் தன் குடும்பத்தில் மூத்த மகன். எத்தனையோ எதிர்பார்ப்புகள் அவனுக்கு இருந்திருக்கும். படித்து முடித்துவிட்டு வாழ்க்கையைத் தொடங்கும் காலம் அது. எதிர்காலத்தைக் குறித்த எண்ணற்ற கனவுகளோடு இருந்திருப்பான். ஆனால், கடந்த இரண்டு வருடப் போராட்டத்தின் இறுதியில் மரணம் அவனைத் தழுவிக்கொண்டது.
 
